Cleaned style guides story

--- a/stories/style-guides/index.html
+++ b/stories/style-guides/index.html
@@ -42,17 +42,14 @@
         </a>
     </nav>
     <div class="aboutme-div">
-        <p class="aboutme-p-font">
-            I want to preface this presentation with saying I don’t have strong opinions about these newsrooms and
-            that’s completely unrelated to the fact that I’m looking for a job … no seriously available starting August.
-        </p>
+        <p style="font-size: 28px; color: black; font-weight: bold; text-align: center;">How do different newsrooms' styleguides compare?</p>
         <p class="aboutme-p-font">In May 2020, when George Floyd was murdered during an arrest in Minneapolis, it
             sparked nationwide protests as you may all recall. In the aftermath of Black Lives Matter protests then the
             conversation around police brutality was brought to center stage.
-            Something changed in newsrooms.
+            Something changed in newsrooms. 
         </p>
         <p class="aboutme-p-font">Newsrooms across the country, from The New York Times to Atlantic, AP, Columbia
-            Journalism Review responded by announcing that they’ve updated their style guides to capitalize the world
+            Journalism Review updated their style guides to capitalize the world
             “Black”</p>
         <p class="aboutme-p-font">But, this isn’t new. And it’s not just the word “Black” that has been brought to
             mainstream discussion. There’s more.</p>
@@ -73,13 +70,12 @@
         <p class="aboutme-p-font">Here’s what I learned!</p>
         <p class="aboutme-p-font">On something like abortion, newsrooms tend to agree and advice against using
             “pro-life” or “pro-choice</p>
-        <p class="aboutme-p-font">Going back to my initial example of the word “terrorist”; here’s what the newsrooms I
-            scraped have to say!</p>
+        <p class="aboutme-p-font">Going back to my initial example of the word “terrorist”; newsrooms tend to have fairly similar rules, with minor exceptions here and there</p>
         <p class="aboutme-p-font">For BBC, the word terrorist in itself isn’t banned, but the style guide advices
             journalists to be cautious with using it. NPR makes a solid case for using very precise language. The
             Guardian refers to UN’s definition of terrorism</p>
-        <p class="aboutme-p-font"><a
-                href="https://docs.google.com/presentation/d/1GGVP-Opkh9Qump65YmTkFFssOsy1uyWEKjcPYtPmEYU/edit?usp=sharing"
-                target=_blank">Here's a presentation I made on this project!</a></p>
+            <p class="aboutme-p-font">There's a lot more and I could go on and on, but if you'd like to check the database for yourself, it's linked below!</p>
+            <p class="aboutme-p-font"><i>Please note, the scrape for this dataset was done on February 26, 2022</i></p>
         <a class="aboutme-buttons" href="https://areenaarora.com/comparing-newsrooms-styleguides" target="_blank">Check the searchable database here!</a>
+        <p>
 </body>
