--- a/stories/ny-state-spills/index.html
+++ b/stories/ny-state-spills/index.html
@@ -41,7 +41,7 @@
     <div class="aboutme-div">
         <p style="font-size: 28px; color: black; font-weight: bold; text-align: center;">Westchester reports most
             number of hazardous spill incidents in New York</p>
-        Albany reports most amount of stuff spilled
+        <strong>Albany reports most amount of stuff spilled</strong>
         <br><br>
         In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72
         counties from the state included in the dataset, Westchester had the most number of spill incidents
@@ -64,7 +64,6 @@
 
         <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Incident details for the largest spill</figcaption>
         <br><br>
-
         Three more incidents were found the same facility each with major spillage quantities. All these spills,
         when cross-referenced with the detailed spill incidents search database reportedly affected the air with
         odor. No further details were reported on the database. The town of Colonie's population is over 83,000,
@@ -118,6 +117,7 @@
         low quantities of material spilled raising questions as to why it took so long to close these incident
         files.
         <br><br>
+        <strong>
         This is an ongoing project and the data and code can be found <a href="https://github.com/areenaarora/ny-spills"
-            target="_blank">here.</a>
+            target="_blank">here.</a></strong>
     </div>
