--- a/stories/ny-state-spills/index.html
+++ b/stories/ny-state-spills/index.html
@@ -121,3 +121,4 @@
         This is an ongoing project and the data and code can be found <a href="https://github.com/areenaarora/ny-spills"
             target="_blank">here.</a></strong>
     </div>
+    </body>
