--- a/aboutme.html
+++ b/aboutme.html
@@ -35,8 +35,7 @@
         </a>
     </nav>
     <div class="aboutme-div">
-<h4> Hi!</h4>
-
+        <h4> Hi there!</h4>
         <p class="aboutme-p-font">I'm interested in covering <mark> <span style="background-color:#DFFF00">climate
                     justice</span></mark>, <mark> <span style="background-color:#7DF9FF">big tech</span></mark> and the
             intersection of the two using <mark><span style="background-color:#E0B0FF">data</span></mark>.</p>
@@ -74,5 +73,4 @@
                 :)</a>
         </div>
     </div>
-
 </body>
