--- a/stories/style-guides/index.html
+++ b/stories/style-guides/index.html
@@ -44,7 +44,7 @@
     <div class="aboutme-div">
         <p style="font-size: 28px; color: black; font-weight: bold; text-align: center;">How do different newsrooms' styleguides compare?</p>
         <p class="aboutme-p-font">In May 2020, when George Floyd was murdered during an arrest in Minneapolis, it
-            sparked nationwide protests as you may all recall. In the aftermath of Black Lives Matter protests then the
+            sparked nationwide protests as you may recall. In the aftermath of Black Lives Matter protests then the
             conversation around police brutality was brought to center stage.
             Something changed in newsrooms. 
         </p>
@@ -52,9 +52,7 @@
             Journalism Review updated their style guides to capitalize the world
             “Black”</p>
         <p class="aboutme-p-font">But, this isn’t new. And it’s not just the word “Black” that has been brought to
-            mainstream discussion. There’s more.</p>
-        <p class="aboutme-p-font">Reuters refrains from using the word “terrorist” and advices using more “specific
-            terms” like bomber, hijacker, attacker or gunman.</p>
+            mainstream discussion. After 9/11, Reuters updated its guide to remove the word "terrorist" and adviced journalists to use more “specific terms” like bomber, hijacker, attacker or gunman.</p>
         <p class="aboutme-p-font">But, let’s take a step back. Why should we even care? What’s the point of all of this?
         </p>
         <p class="aboutme-p-font">It’s because our readers care. In their book Global Terrorism and New Media writers
@@ -68,8 +66,7 @@
         <p class="aboutme-p-font">I started with BBC, BuzzFeed, NPR, Guardian and Reuters. These five reflect a pretty
             wide ranging audience and also because they were available online for free!</p>
         <p class="aboutme-p-font">Here’s what I learned!</p>
-        <p class="aboutme-p-font">On something like abortion, newsrooms tend to agree and advice against using
-            “pro-life” or “pro-choice</p>
+        <p class="aboutme-p-font">On something like abortion, newsrooms tend to have similar language and advice against using “pro-life” or “pro-choice</p>
         <p class="aboutme-p-font">Going back to my initial example of the word “terrorist”; newsrooms tend to have fairly similar rules, with minor exceptions here and there</p>
         <p class="aboutme-p-font">For BBC, the word terrorist in itself isn’t banned, but the style guide advices
             journalists to be cautious with using it. NPR makes a solid case for using very precise language. The
