Standardized stylesheet, added comments to style rules

--- a/aboutme.html
+++ b/aboutme.html
@@ -36,6 +36,7 @@
     </nav>
     <div class="aboutme-div">
         <h4> Hi there!</h4>
+        <img src="Areena-Arora.JPG" class="headshot">
         <p class="aboutme-p-font">I'm interested in covering <mark> <span style="background-color:#DFFF00">climate
                     justice</span></mark>, <mark> <span style="background-color:#7DF9FF">big tech</span></mark> and the
             intersection of the two using <mark><span style="background-color:#E0B0FF">data</span></mark>.</p>
