--- a/stories/ny-state-spills/index.html
+++ b/stories/ny-state-spills/index.html
@@ -43,82 +43,94 @@
             number of hazardous spill incidents in New York</p>
         <strong>Albany reports most amount of stuff spilled</strong>
         <br><br>
-        In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72
-        counties from the state included in the dataset, Westchester had the most number of spill incidents
-        recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany
-        leads the way!
+        <p class="aboutme-p-font">
+            In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72
+            counties from the state included in the dataset, Westchester had the most number of spill incidents
+            recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany
+            leads the way!</p>
         <br><br>
         <center><img src="Albany-spills.png" width="700" height="500"
-                alt="Number of spills in Albany county by their source type"/></center>
+                alt="Number of spills in Albany county by their source type" /></center>
         <br> <br>
-        Fuel and transformer oil were the most common materials spilled. While many reported incidents are minor and
-        are cleaned up without any damage, in some other instances, spillage may seep through the soil, eventually
-        entering groundwater and "can make water supplies unsafe to drink," according to the dataset's <a
-            href="file:///Users/areena.arora/Downloads/NYSDEC_SpillIncidents_Overview.pdf" target="_blank">documentation
-            provided by the city.</a> The biggest spill in the last five years
-        happened in August 2017 when over a hundred billion pounds of food waste spilled, affecting the air. It
-        happened in a landfill in Colonie in Albany. The database doesn't give out its cause or any other additional
-        details.
+        <p class="aboutme-p-font">
+            Fuel and transformer oil were the most common materials spilled. While many reported incidents are minor and
+            are cleaned up without any damage, in some other instances, spillage may seep through the soil, eventually
+            entering groundwater and "can make water supplies unsafe to drink," according to the dataset's <a
+                href="file:///Users/areena.arora/Downloads/NYSDEC_SpillIncidents_Overview.pdf"
+                target="_blank">documentation
+                provided by the city.</a> The biggest spill in the last five years
+            happened in August 2017 when over a hundred billion pounds of food waste spilled, affecting the air. It
+            happened in a landfill in Colonie in Albany. The database doesn't give out its cause or any other additional
+            details.</p>
         <br><br>
         <center><img src="food-spill.png" width="400" height="500">
-
-        <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Incident details for the largest spill</figcaption>
-        <br><br>
-        Three more incidents were found the same facility each with major spillage quantities. All these spills,
-        when cross-referenced with the detailed spill incidents search database reportedly affected the air with
-        odor. No further details were reported on the database. The town of Colonie's population is over 83,000,
-        according to its website. It's about 160 miles north of New York City.
-        <br><br>
-        <center><iframe
-                src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1524975.1538542125!2d-74.98947826580897!3d41.71043855123143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%20City%2C%20NY!3m2!1d40.7127753!2d-74.0059728!4m5!1s0x89de0ce1bf7cdb8d%3A0x577610d40a5db931!2sColonie%2C%20NY!3m2!1d42.7236699!2d-73.77132!5e0!3m2!1sen!2sus!4v1645392160717!5m2!1sen!2sus"
-                width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center>
-        <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Distance between NYC and Colonie</figcaption>
-        <br><br>
-
-        For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over
-        three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents in
-        Queens, jet fuel from airports seem to be the biggest troublemaker. Some incidents are listed to have had
-        "deliberate"</p>
-        <br><br>
-        <img src="queens-spills.png" width="700" height="500">
-        <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Airports are the source of the most spillage in
-            Queens
-        </figcaption>
-        <br><br>
-        <p>
-            I also looked at the number of days it takes to close incident complaints. Some of the longest ones were
-            well over a thousand days, but there's no reason listed for the delay. The quantity of spillage doesn't
-            seem
-            to matter, with the longest incident record being one about a gallon worth of petroleum spillage in
-            Cayuga
-            county. The clean up process involves hiring a contractor by the state Department of Environmental
-            Conservation.
+            <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Incident details for the largest spill</figcaption>
             <br><br>
-
-            Another interesting phenomenon observed from the dataset — most spills occured in August and July. More
-            specifically, most spills in a single month happened in August 2020.
+            <p class="aboutme-p-font">
+                Three more incidents were found the same facility each with major spillage quantities. All these spills,
+                when cross-referenced with the detailed spill incidents search database reportedly affected the air with
+                odor. No further details were reported on the database. The town of Colonie's population is over 83,000,
+                according to its website. It's about 160 miles north of New York City.</p>
+            <br><br>
+            <center><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1524975.1538542125!2d-74.98947826580897!3d41.71043855123143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%20City%2C%20NY!3m2!1d40.7127753!2d-74.0059728!4m5!1s0x89de0ce1bf7cdb8d%3A0x577610d40a5db931!2sColonie%2C%20NY!3m2!1d42.7236699!2d-73.77132!5e0!3m2!1sen!2sus!4v1645392160717!5m2!1sen!2sus"
+                    width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center>
+            <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Distance between NYC and Colonie</figcaption>
+            <br><br>
+            <p class="aboutme-p-font">
+                For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens.
+                Over
+                three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents
+                in
+                Queens, jet fuel from airports seem to be the biggest troublemaker. Some incidents are listed to have
+                had
+                "deliberate"</p>
+            <br><br>
+            <img src="queens-spills.png" width="700" height="500">
+            <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Airports are the source of the most spillage in
+                Queens
+            </figcaption>
+            <br><br>
+            <p class="aboutme-p-font">
+                I also looked at the number of days it takes to close incident complaints. Some of the longest ones were
+                well over a thousand days, but there's no reason listed for the delay. The quantity of spillage doesn't
+                seem
+                to matter, with the longest incident record being one about a gallon worth of petroleum spillage in
+                Cayuga
+                county. The clean up process involves hiring a contractor by the state Department of Environmental
+                Conservation.</p>
+            <br><br>
+            <p class="aboutme-p-font">
+                Another interesting phenomenon observed from the dataset — most spills occured in August and July. More
+                specifically, most spills in a single month happened in August 2020.</p>
             <br><br>
             <center><img src="top-spills.png" width="700" height="500"
-                    alt="Top ten incidents, by quantity plotted by county and sources"/></center>
-        <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Top ten incidents, by quantity plotted by county and
-            sources</figcaption>
-        <br><br>
-        In Niagra, Chemung and Erie counties, commercial or industrial spillage is the biggest culprit.
-        <br><br>
+                    alt="Top ten incidents, by quantity plotted by county and sources" /></center>
+            <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Top ten incidents, by quantity plotted by county and
+                sources</figcaption>
+            <br><br>
+            <p class="aboutme-p-font">
+                In Niagra, Chemung and Erie counties, commercial or industrial spillage is the biggest culprit.</p>
+            <br><br>
 
-        <strong>Questions this dataset does not answer</strong>
-        <br><br>
-        The dataset doesn't include what happenes to recovered hazardous materials neither does it speak to the
-        affects of materials that remain suspended in natural resources like air and groundwater. The dataset also
-        doesn't include information on number of people affected by the spills.</p>
-
-        The difference between incident and close data for some spills is over a thousand days, which is worth
-        digging deeper into. The top five spills with the longest gap between incident and close date have really
-        low quantities of material spilled raising questions as to why it took so long to close these incident
-        files.
-        <br><br>
-        <strong>
-        This is an ongoing project and the data and code can be found <a href="https://github.com/areenaarora/ny-spills"
-            target="_blank">here.</a></strong>
+            <strong>Questions this dataset does not answer</strong>
+            <br><br>
+            <p class="aboutme-p-font">
+                The dataset doesn't include what happenes to recovered hazardous materials neither does it speak to the
+                affects of materials that remain suspended in natural resources like air and groundwater. The dataset
+                also
+                doesn't include information on number of people affected by the spills.</p>
+            <p class="aboutme-p-font">
+                The difference between incident and close data for some spills is over a thousand days, which is worth
+                digging deeper into. The top five spills with the longest gap between incident and close date have
+                really
+                low quantities of material spilled raising questions as to why it took so long to close these incident
+                files.</p>
+            <br><br>
+            <strong>
+                <p class="aboutme-p-font">
+                    This is an ongoing project and the data and code can be found <a
+                        href="https://github.com/areenaarora/ny-spills" target="_blank">here.</a>
+            </strong></p>
     </div>
-    </body>
+</body>
