--- a/stories/style-guides/index.html
+++ b/stories/style-guides/index.html
@@ -74,5 +74,5 @@
             <p class="aboutme-p-font">There's a lot more and I could go on and on, but if you'd like to check the database for yourself, it's linked below!</p>
             <p class="aboutme-p-font"><i>Please note, the scrape for this dataset was done on February 26, 2022</i></p>
         <a class="aboutme-buttons" href="https://areenaarora.com/comparing-newsrooms-styleguides" target="_blank">Check the searchable database here!</a>
-        <p>
+        </div>
 </body>
