Styled image on about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -35,8 +35,8 @@
         </a>
     </nav>
     <div class="aboutme-div">
-        <h4> Hi there!</h4>
-        <img src="Areena-Arora.JPG" class="headshot">
+        <h2> Hi there!</h2>
+        <img src="Areena-Arora.JPG" class="responsive-img">
         <p class="aboutme-p-font">I'm interested in covering <mark> <span style="background-color:#DFFF00">climate
                     justice</span></mark>, <mark> <span style="background-color:#7DF9FF">big tech</span></mark> and the
             intersection of the two using <mark><span style="background-color:#E0B0FF">data</span></mark>.</p>
@@ -47,7 +47,9 @@
                 href="https://www.refinitiv.com/en/products/eikon-trading-software" target="_blank"><span
                     style="color:#ff8000">Reuters-Refinitiv terminal
                     service Eikon</span> </a>and helped lead a team at a media startup, <a href="https://glance.com/"
-                target="_blank"><span style="color:#FF0049">Glance.</span></a> Outside of all things news, I
+                target="_blank"><span style="color:#FF0049">Glance.</span></a>
+        </p>
+        <p class="aboutme-p-font">Outside of all things news, I
             <strong>LOVE</strong>
             cooking —I make my own cheese and breads—the whole deal. I'm also a newbie plant mom🪴 :)
         </p>
