--- a/playground.html
+++ b/playground.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
     <script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <title>Playground</title>
+
 <body>
     <nav>
         <a href="https://areenaarora.com">
@@ -38,8 +40,8 @@
     </h1>
 
     <h4> Rules </h4>
-    <p class="p-playground"> This is a catalogue of my ongoing projects + things I find interesting. If you see more than two projects I'm currently working on, <mark><a href="mailto:areena.arora@gmail.com", target="_blank">yell at me, please!</a></mark></p>
+    <p class="p-playground"> This is a catalogue of my ongoing projects + things I find interesting. If you see more
+        than two projects I'm currently working on, <mark><a href="mailto:areena.arora@gmail.com" , target="_blank">yell
+                at me, please!</a></mark></p>
     <br>
     <p class="p-playground">Coming soon: Ongoing data projects + interesting articles/podcasts/book reviews🌐</p>
-
-
