--- a/playground.html
+++ b/playground.html
@@ -40,26 +40,32 @@
     </h1>
 
     <h2> Rules </h2>
-    <p class="p-playground"> This is a catalogue of my ongoing projects + things I find interesting (dream projects). If you see more
+    <p class="p-playground"> This is a catalogue of my ongoing projects + things I find interesting (dream projects). If
+        you see more
         than two projects I'm currently working on, <mark><a href="mailto:areena.arora@gmail.com" , target="_blank">yell
                 at me, please!</a></mark></p>
     <br>
     <h2>What's Areena upto?🌐</h2>
-    <div class="row">
-        <div class="column">
-    <ul>
-        <h3><u>Ongoing projects</u></h3>
-        <li>
-            <h2>Learning Altair</h2>
-            <p class="aboutme-p-font">Altair is a visualization library in Python and the charts it can make <a href="https://altair-viz.github.io/gallery/index.html" target="_blank">look incredible!👀</a></p>
-        </li>
-        <li>
-            <h2>Title #2</h2>
-            <p class="aboutme-p-font">Text Content #2</p>
-        </li>
-      </ul>
-    </div>
-    </div>
-    <!-- <div class="reading-list"> -->
+    <div class="three-dabbas">
+        <div class="sticky-notes">
+            <h3><u>Ongoing projects</u></h3>
+            <ul>
+                <li>
+                    <h2>Learning Altair</h2>
+                    <p class="aboutme-p-font">Altair is a visualization library in Python and the charts it can make <a
+                            href="https://altair-viz.github.io/gallery/index.html" target="_blank">look
+                            incredible!👀</a></p>
+                </li>
+                <li>
+                    <h2>Title #2</h2>
+                    <p class="aboutme-p-font">Text Content #2</p>
+                </li>
+                <li>
+                    <h2>Title #2</h2>
+                    <p class="aboutme-p-font">Text Content #2</p>
+                </li>
+            </ul>
+        </div>
 
+        <div class="reading-list"></div>
     </div>
