--- a/playground.html
+++ b/playground.html
@@ -36,7 +36,7 @@
         </a>
     </nav>
     <h1>
-        This is my playground!
+        This is my playground!🌻
     </h1>
     <p class="p-playground"> It's a catalogue of my ongoing projects + things I find interesting. If
         you have thoughts/feedback/suggestions about these projects, <mark><a href="mailto:areena.arora@gmail.com" ,
