--- a/playground.html
+++ b/playground.html
@@ -84,6 +84,12 @@
                                 href="https://www.wired.com/story/dark-stores-ecommerce-cities-urban-planning/?utm_source=pocket&utm_medium=email&utm_campaign=pockethits"
                                 target="_blank">Online Shopping Is Reshaping Real-World Cities</a></p>
                     </li>
+                    <li>
+                        <p class="reading-list-p-font"><a
+                                href="https://vita.had.co.nz/papers/tidy-data.pdf"
+                                target="_blank">Tidy Data, Journal of Statistical Software</a></p>
+                    </li>
+
                 </ol>
                 <br>
                 <button id="update">more coming soon!</button>
