--- a/playground.html
+++ b/playground.html
@@ -66,7 +66,7 @@
 
         <div class="reading-list">
             <div class="reading-list-inside">
-                <h2>Stuff that intrigued me recently!</h2>
+                <h2>Stuff that intrigued me recently :)</h2>
                 <ol>
                     <li>
                         <p class="reading-list-p-font"><a
