--- a/playground.html
+++ b/playground.html
@@ -51,7 +51,7 @@
                     <h2>Learning Altair</h2>
                     <p class="aboutme-p-font">Altair is a visualization library in Python and the charts it can make <a
                             href="https://altair-viz.github.io/gallery/index.html" target="_blank">look
-                            incredible!👀</a></p>
+                            incredible!👀</a><br><a href="https://github.com/areenaarora/Altair" target="_blank">Here's my progress so far</a></p>
                 </li>
                 <li>
                     <h2>Learning R</h2>
