--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img src="card-photos/oil-spill.jpg" alt="Oil spill" style="width:100%">
                 <div class="story-card-container">
                     <h3>An analysis of hazardous material spill incidents in New York State over five years</h3>
-                    <p>February 2022</p>
+                    <h4>February 2022</h4>
                 </div>
             </div>
         </a>
@@ -64,7 +64,7 @@
                 <img src="stories/biryani/biryani-new.jpg" alt="Biryani" style="width:100%">
                 <div class="story-card-container">
                     <h3>Where's India's best and cheapest Biryani?</h3>
-                    <p>February 2022</p>
+                    <h4>February 2022</h4>
                 </div>
             </div>
         </a>
@@ -73,7 +73,7 @@
                 <img src="card-photos/editor.jpg" alt="editor image" style="width:100%">
                 <div class="story-card-container">
                     <h3>Comparing different newsrooms' style</h3>
-                    <p>December 2021</p>
+                    <h4>December 2021</h4>
                 </div>
             </div>
         </a>
@@ -82,7 +82,7 @@
                 <img src="card-photos/idea.jpg" alt="idea" style="width:100%">
                 <div class="story-card-container">
                     <h3>My digital playground — This website</h3>
-                    <p>ongoing</p>
+                    <h4>ongoing</h4>
                 </div>
             </div>
         </a>
@@ -97,7 +97,7 @@
                 <img src="card-photos/construction.jpg" alt="construction" style="width:100%">
                 <div class="story-card-container">
                     <h3>Indian Creek Plaza — over budget and behind original construction schedule</h3>
-                    <p>October 2017</p>
+                    <h4>October 2017</h4>
                 </div>
             </div>
         </a>
@@ -107,7 +107,7 @@
                 <img src="card-photos/christmas-tree.jpg" alt="Christmas Tree" style="width:100%">
                 <div class="story-card-container">
                     <h3>National Christmas tree shortage drives up prices at Canyon County tree lots</h3>
-                    <p>November 2017</p>
+                    <h4>November 2017</h4>
                 </div>
             </div>
         </a>
@@ -117,7 +117,7 @@
                 <img src="card-photos/culvert.jpg" alt="Culvert" style="width:100%">
                 <div class="story-card-container">
                     <h3>Culvert concerns: Culvert report reveals 11 other structures in deficient condition</h3>
-                    <p>December 2017</p>
+                    <h4>December 2017</h4>
                 </div>
             </div>
         </a>
@@ -127,7 +127,7 @@
                 <img src="card-photos/crime.jpg" alt="Crime image" style="width:100%">
                 <div class="story-card-container">
                     <h3>Prosecutor: Retired Boise priest found with child porn, drugs</h3>
-                    <p>February 2018</p>
+                    <h4>February 2018</h4>
                 </div>
             </div>
         </a>
@@ -136,7 +136,7 @@
                 <img src="card-photos/RV.jpg" alt="RV" style="width:100%">
                 <div class="story-card-container">
                     <h3>As housing inventory shrinks, people look to living in RVs</h3>
-                    <p>April 2018</p>
+                    <h4>April 2018</h4>
                 </div>
             </div>
         </a>
