--- a/playground.html
+++ b/playground.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet-playground.css">
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,17 +50,17 @@
             <ul>
                 <li>
                     <h2>Learning Altair</h2>
-                    <p class="aboutme-p-font">Altair is a visualization library in Python and the charts it can make <a
+                    <p>Altair is a visualization library in Python and the charts it can make <a
                             href="https://altair-viz.github.io/gallery/index.html" target="_blank">look
                             incredible!👀</a><br><a href="https://github.com/areenaarora/Altair" target="_blank">Here's my progress so far</a></p>
                 </li>
                 <li>
                     <h2>Learning R</h2>
-                    <p class="aboutme-p-font">Hoping to supplement my Python skills with R for data analyses</p>
+                    <p>Hoping to supplement my Python skills with R for data analyses</p>
                 </li>
                 <li>
                     <h2>This website</h2>
-                    <p class="aboutme-p-font">Cleaning up stylesheets for this website</p>
+                    <p>Cleaning up stylesheets for this website</p>
                 </li>
             </ul>
         </div>
