--- a/aboutme.html
+++ b/aboutme.html
@@ -39,14 +39,13 @@
         <h2>Hi there!</h2>
         <div class="responsive-wrapper">
             <div>
-                
-                <p class="aboutme-p-font">I'm interested in covering <mark> <span
+                <p>I'm interested in covering <mark> <span
                             style="background-color:#DFFF00">climate
                             justice</span></mark>, <mark> <span style="background-color:#7DF9FF">big tech</span></mark>
                     and
                     the intersection of the two using <mark><span style="background-color:#E0B0FF">data</span></mark>.
                 </p>
-                <p class="aboutme-p-font">
+                <p>
                     I've worked as a city government reporter for a <a href="https://www.idahopress.com/"
                         target="_blank"><span style="color:#17b186">local newspaper in Idaho,</span></a> worked for <a
                         href="https://www.refinitiv.com/en/products/eikon-trading-software" target="_blank"><span
@@ -54,22 +53,22 @@
                             service Eikon</span> </a>and helped lead a team at a media startup, <a
                         href="https://glance.com/" target="_blank"><span style="color:#FF0049">Glance.</span></a>
                 </p>
-                <p class="aboutme-p-font">Outside of all things news, I
+                <p>Outside of all things news, I
                     <strong>LOVE</strong>
                     cooking —I make my own cheese and breads—the whole deal. I'm also a newbie plant mom🪴 :)
                 </p>
-                <p class="aboutme-p-font">
+                <p>
                     I'm pursuing a master's degree in <strong>Data Journalism</strong> from <span
                         style="color: #000d74">Columbia
                         University.</span> I write a <a href="https://areena.substack.com/" target="_blank">weekly
                         newsletter,</a> and I'm <b>always</b> up for good conversations over a cup of ✨<span
                         class='blink-text'>chai!</span>✨
                 </p>
-                <p class="aboutme-p-font">
+                <p>
                     <b>Data analysis:</b> Python [Pandas, Beautiful Soup, Selenium], Regex, SQL, Excel
                 </p>
-                <p class="aboutme-p-font"> <b>Visualization:</b> Adobe Illustrator, QGIS, Datawrapper, CSS </p>
-                <p class="aboutme-p-font"> <b>Languages:</b> Hindi, Punjabi </p>
+                <p> <b>Visualization:</b> Adobe Illustrator, QGIS, Datawrapper, CSS </p>
+                <p> <b>Languages:</b> Hindi, Punjabi </p>
                 <br>
             </div>
             <img src="Areena-Arora.jpeg" class="responsive-img" />
