--- a/stories/biryani/index.html
+++ b/stories/biryani/index.html
@@ -44,47 +44,47 @@
     <br><br>
     <div class="aboutme-div">
         <h2><center>Where's the best Biryani at?</center></h2>
-        <p class="aboutme-p-font">
+        <p>
         Dum, Lucknowi, Thalassery, with or without potatoes … Indians have opinions about our Biryani. We like to
         argue if the vegetable version even qualifies as Biryani — we’ll save that debate for another day!</p>
-        <p class="aboutme-p-font">
+        <p>
         But, which city has the best Biryani? I came up with a data-driven solution to settle one of the country’s
         biggest divides! Using <a href="https://www.zomato.com/" target="_blank">Zomato</a>, I scraped information
         on restaurants that deliver Biryani in six cities: Delhi, Mumbai, Hyderabad, Lucknow, Kolkata and Bangalore.</p>
-        <p class="aboutme-p-font">
+        <p>
         While I think only Hyderabad, Lucknow and Kolkata qualify for the race, I figured I’d give the other three a chance too.</p>
-        <p class="aboutme-p-font">
+        <p>
         If you're unfamiliar, Biryani is a meat and rice dish with different versions that originated in different
         Indian cities.</p>
         <img src="biryani-new.jpg" style="width:500px;height:400px; align: right;">
-        <p class="aboutme-p-font">
+        <p>
         For the project, I scraped user ratings and price ranges. Note that this dataset has a few flaws I want to
         mention upfront. First, it is a database of 544 restaurants listed on Zomato, which I'm assuming to be fairly representative, owing to the fact that Zomato serves over 32 million users each month, according to an Economic Times report.</p>
-        <p class="aboutme-p-font">
+        <p>
         Second, albeit a smaller one, the ratings could be skewed by users’ delivery experience on a particular day
         and not necessarily reflective of the taste.</p>
-        <p class="aboutme-p-font">In the dataset, most entries were from Bangalore — with 101, followed by 99 from Lucknow. The least number of entries, surprisingly, were from Hyderabad — the southern city that’s famous for its spicy dum-style biryani.</p>
-        <p class="aboutme-p-font">
+        <p>In the dataset, most entries were from Bangalore — with 101, followed by 99 from Lucknow. The least number of entries, surprisingly, were from Hyderabad — the southern city that’s famous for its spicy dum-style biryani.</p>
+        <p>
         For the price ranges, we like our Biryani cheap and nice. Most places in the database serve Biryani for one
         for ₹100, which is about $1.3. Kolkata has the cheapest Biryani selling portions for one for ₹112 on average.</p>
-        <p class="aboutme-p-font">The cheapest places in the dataset, from Kolkata, include eight places that sell a plate for ₹50. And, they’re rated pretty highly too! </p>
-        <p class="aboutme-p-font">
+        <p>The cheapest places in the dataset, from Kolkata, include eight places that sell a plate for ₹50. And, they’re rated pretty highly too! </p>
+        <p>
         The highest rated place, Chittoda's Suruchee Restaurant has a whopping 4.4 out of 5 rating! I wondered if
         that was a Zomato users-only opinion, but, the rating checks out from their Google reviews as well. I dove deep
         into their reviews and looks like people love them!</p>
-        <p class="aboutme-p-font">
+        <p>
         On the other side, Delhi-NCR has some of the swankiest options, with restaurants selling servings for one
         for ₹500 or $7.</p>
-        <p class="aboutme-p-font">
+        <p>
         Hyderabad has the most places — 48 — rated over 4, followed by Mumbai with 38 places.</p>
-        <p class="aboutme-p-font">
+        <p>
         If you'd like to search through my dataset, here you go! I created this searchable database using <a
             href="https://flourish.studio" target="_blank"> Flourish.</a> Please note 'Delhi' is listed here as
         'NCR'. You can also search for keywords in restaurant names in the dataset.</p>
         <div class="flourish-embed" data-src="story/1126812">
             <script src="https://public.flourish.studio/resources/embed.js"></script>
         </div>
-        <p class="aboutme-p-font">
+        <p>
         Lucknow, Hyderabad and Kolkata each have distinctive Biryani styles. Hyderabadi is a tad spicier, served
         with a side of a punchy chili sauce (Mirchi ka Salan), Lucknowi is more fragrant and milder (also my favorite!) and Kolkata's is like a warm comforting hug complete with boiled eggs and potatoes! And if you're wondering how
         I make Biryani, here's one of my many recipes!</p>
@@ -180,7 +180,7 @@
             </div>
             </blockquote>
             <script async src="https://instagram.com/static/bundles/es6/EmbedSDK.js/47c7ec92d91e.js"></script>
-        <p class="aboutme-p-font">
+        <p>
         <strong>My code for this analysis can be found <a href="https://github.com/areenaarora/street-food-bluru" target="_blank"><mark>here!</mark></a></strong></p>
         </div>
         </body>
