--- a/stories/ny-state-spills/index.html
+++ b/stories/ny-state-spills/index.html
@@ -40,15 +40,15 @@
     <br>
     <div class="aboutme-div">
         <h2>Westchester reports most number of hazardous spill incidents in New York</h2>
-        <p class="aboutme-p-font"><strong>Albany reports most amount of stuff spilled</strong></p>
-        <p class="aboutme-p-font">
+        <p><strong>Albany reports most amount of stuff spilled</strong></p>
+        <p>
             In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72
             counties from the state included in the dataset, Westchester had the most number of spill incidents
             recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany
             leads the way!</p>
         <center><img src="Albany-spills.png" width="700" height="500"
                 alt="Number of spills in Albany county by their source type" /></center>
-        <p class="aboutme-p-font">
+        <p>
             Fuel and transformer oil were the most common materials spilled. While many reported incidents are minor and
             are cleaned up without any damage, in some other instances, spillage may seep through the soil, eventually
             entering groundwater and "can make water supplies unsafe to drink," according to the dataset's <a
@@ -61,7 +61,7 @@
         <center><img src="food-spill.png" width="400" height="500">
             <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Incident details for the largest spill</figcaption>
             <br><br>
-            <p class="aboutme-p-font">
+            <p>
                 Three more incidents were found the same facility each with major spillage quantities. All these spills,
                 when cross-referenced with the detailed spill incidents search database reportedly affected the air with
                 odor. No further details were reported on the database. The town of Colonie's population is over 83,000,
@@ -70,7 +70,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1524975.1538542125!2d-74.98947826580897!3d41.71043855123143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%20City%2C%20NY!3m2!1d40.7127753!2d-74.0059728!4m5!1s0x89de0ce1bf7cdb8d%3A0x577610d40a5db931!2sColonie%2C%20NY!3m2!1d42.7236699!2d-73.77132!5e0!3m2!1sen!2sus!4v1645392160717!5m2!1sen!2sus"
                     width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center>
             <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Distance between NYC and Colonie</figcaption>
-            <p class="aboutme-p-font">
+            <p>
                 For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens.
                 Over
                 three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents
@@ -82,7 +82,7 @@
             <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Airports are the source of the most spillage in
                 Queens
             </figcaption>
-            <p class="aboutme-p-font">
+            <p>
                 I also looked at the number of days it takes to close incident complaints. Some of the longest ones were
                 well over a thousand days, but there's no reason listed for the delay. The quantity of spillage doesn't
                 seem
@@ -90,30 +90,30 @@
                 Cayuga
                 county. The clean up process involves hiring a contractor by the state Department of Environmental
                 Conservation.</p>
-            <p class="aboutme-p-font">
+            <p>
                 Another interesting phenomenon observed from the dataset — most spills occured in August and July. More
                 specifically, most spills in a single month happened in August 2020.</p>
             <center><img src="top-spills.png" width="700" height="500"
                     alt="Top ten incidents, by quantity plotted by county and sources" /></center>
             <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Top ten incidents, by quantity plotted by county and
                 sources</figcaption>
-            <p class="aboutme-p-font">
+            <p>
                 In Niagra, Chemung and Erie counties, commercial or industrial spillage is the biggest culprit.</p>
 
             <strong>Questions this dataset does not answer</strong>
-            <p class="aboutme-p-font">
+            <p>
                 The dataset doesn't include what happenes to recovered hazardous materials neither does it speak to the
                 affects of materials that remain suspended in natural resources like air and groundwater. The dataset
                 also
                 doesn't include information on number of people affected by the spills.</p>
-            <p class="aboutme-p-font">
+            <p>
                 The difference between incident and close data for some spills is over a thousand days, which is worth
                 digging deeper into. The top five spills with the longest gap between incident and close date have
                 really
                 low quantities of material spilled raising questions as to why it took so long to close these incident
                 files.</p>
             <strong>
-                <p class="aboutme-p-font">
+                <p>
                     This is an ongoing project and the data and code can be found <a
                         href="https://github.com/areenaarora/ny-spills" target="_blank">here.</a>
             </strong></p>
