--- a/stories/style-guides/index.html
+++ b/stories/style-guides/index.html
@@ -43,36 +43,36 @@
     </nav>
     <div class="aboutme-div">
         <p style="font-size: 28px; color: black; font-weight: bold; text-align: center;">How do different newsrooms' styleguides compare?</p>
-        <p class="aboutme-p-font">In May 2020, when George Floyd was murdered during an arrest in Minneapolis, it
+        <p>In May 2020, when George Floyd was murdered during an arrest in Minneapolis, it
             sparked nationwide protests as you may recall. In the aftermath of Black Lives Matter protests then the
             conversation around police brutality was brought to center stage.
             Something changed in newsrooms. 
         </p>
-        <p class="aboutme-p-font">Newsrooms across the country, from The New York Times to Atlantic, AP, Columbia
+        <p>Newsrooms across the country, from The New York Times to Atlantic, AP, Columbia
             Journalism Review updated their style guides to capitalize the world
             “Black”</p>
-        <p class="aboutme-p-font">But, this isn’t new. And it’s not just the word “Black” that has been brought to
+        <p>But, this isn’t new. And it’s not just the word “Black” that has been brought to
             mainstream discussion. After 9/11, Reuters updated its guide to remove the word "terrorist" and adviced journalists to use more “specific terms” like bomber, hijacker, attacker or gunman.</p>
-        <p class="aboutme-p-font">But, let’s take a step back. Why should we even care? What’s the point of all of this?
+        <p>But, let’s take a step back. Why should we even care? What’s the point of all of this?
         </p>
-        <p class="aboutme-p-font">It’s because our readers care. In their book Global Terrorism and New Media writers
+        <p>It’s because our readers care. In their book Global Terrorism and New Media writers
             Philip Seib and Dana Janbek point out that despite our best efforts to remain neutral, journalists’
             influence is unavoidable. Philip is a journalist and Dana is a communications scholar and researcher.</p>
-        <p class="aboutme-p-font"><strong>Our word choices matter.</strong></p>
-        <p class="aboutme-p-font">Which brings me to this project. I decided to create a unified database — a
+        <p><strong>Our word choices matter.</strong></p>
+        <p>Which brings me to this project. I decided to create a unified database — a
             one-stop-shop if you will— to compare different newsrooms and the word choices they make.</p>
-        <p class="aboutme-p-font">Why? For one, I was curious. But more importantly to see if these style guides
+        <p>Why? For one, I was curious. But more importantly to see if these style guides
             accurately capture the times we live in and their readerships’ priorities.</p>
-        <p class="aboutme-p-font">I started with BBC, BuzzFeed, NPR, Guardian and Reuters. These five reflect a pretty
+        <p>I started with BBC, BuzzFeed, NPR, Guardian and Reuters. These five reflect a pretty
             wide ranging audience and also because they were available online for free!</p>
-        <p class="aboutme-p-font">Here’s what I learned!</p>
-        <p class="aboutme-p-font">On something like abortion, newsrooms tend to have similar language and advice against using “pro-life” or “pro-choice</p>
-        <p class="aboutme-p-font">Going back to my initial example of the word “terrorist”; newsrooms tend to have fairly similar rules, with minor exceptions here and there</p>
-        <p class="aboutme-p-font">For BBC, the word terrorist in itself isn’t banned, but the style guide advices
+        <p>Here’s what I learned!</p>
+        <p>On something like abortion, newsrooms tend to have similar language and advice against using “pro-life” or “pro-choice</p>
+        <p>Going back to my initial example of the word “terrorist”; newsrooms tend to have fairly similar rules, with minor exceptions here and there</p>
+        <p>For BBC, the word terrorist in itself isn’t banned, but the style guide advices
             journalists to be cautious with using it. NPR makes a solid case for using very precise language. The
             Guardian refers to UN’s definition of terrorism</p>
-            <p class="aboutme-p-font">There's a lot more and I could go on and on, but if you'd like to check the database for yourself, it's linked below!</p>
-            <p class="aboutme-p-font"><i>Please note, the scrape for this dataset was done on February 26, 2022</i></p>
+            <p>There's a lot more and I could go on and on, but if you'd like to check the database for yourself, it's linked below!</p>
+            <p><i>Please note, the scrape for this dataset was done on February 26, 2022</i></p>
         <a class="aboutme-buttons" href="https://areenaarora.com/comparing-newsrooms-styleguides" target="_blank">Check the searchable database here!</a>
         </div>
 </body>
