--- a/playground.html
+++ b/playground.html
@@ -56,11 +56,11 @@
                 </li>
                 <li>
                     <h2>Learning R</h2>
-                    <p>Hoping to supplement my Python skills with R for data analyses</p>
+                    <p>Hoping to supplement my Python skills with R for data analyses. Currently reading <a href="https://r4ds.had.co.nz/index.html" target="_blank">R for Data Science</a></p>
                 </li>
                 <li>
                     <h2>This website</h2>
-                    <p>Cleaning up stylesheets for this website</p>
+                    <p>The next big goal: Generating social media preview images</p>
                 </li>
             </ul>
         </div>
@@ -97,4 +97,4 @@
             </div>
         </div>
     </div>
-    <button id="update">Last updated: March 13, 2022</button>
+    <button id="update">Last updated: March 17, 2022</button>
