My blinker text went away :(

--- a/aboutme.html
+++ b/aboutme.html
@@ -40,18 +40,18 @@
         <div class="responsive-wrapper">
             <div>
                 <p>I'm interested in covering <mark> <span
-                            style="background-color:#00ff0d">climate
+                            style="background-color:#ddff00">climate
                             justice</span></mark>, <mark> <span style="background-color:#126ebf; color:aliceblue">big tech</span></mark>
                     and
                     the intersection of the two using <mark><span style="background-color:#6d2f96; color: rgb(180, 227, 13);">data</span></mark>.
                 </p>
                 <p>
                     I've worked as a city government reporter for a <a href="https://www.idahopress.com/"
-                        target="_blank"><span style="color:#1cb117; background-color: black;"> local newspaper in Idaho,</span></a> for <a
+                        target="_blank"><span style="color:#1cb117"> local newspaper in Idaho,</span></a> for <a
                         href="https://www.refinitiv.com/en/products/eikon-trading-software" target="_blank"><span
-                            style="color:#ff8000; background-color: white;">Reuters-Refinitiv terminal
+                            style="color:#ff8000">Reuters-Refinitiv terminal
                             service Eikon</span></a> and helped lead a team at a media startup, <a
-                        href="https://glance.com/" target="_blank"><span style="color:#FF0049; background-color: #000d74;">Glance.</span></a>
+                        href="https://glance.com/" target="_blank"><span style="color:#FF0049">Glance.</span></a>
                 </p>
                 <p>Outside of all things news, I
                     <strong>LOVE</strong>
