--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     Areena Arora
     </h1>
     <h2>
-        I'm a <span class=blink>data journalist.</span> Here's some of my recent work! :)
+        I'm a <span class="blinking">data journalist.</span> Here's some of my recent work! :)
     </h2>
     <br><br>
     <button>Data+Viz</button>
