Added Uttarakhand feature story

--- a/stories/style-guides/index.html
+++ b/stories/style-guides/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -84,3 +83,4 @@
         the searchable database here!</a>
     </div>
 </body>
+</html>
