updated Uttarakhand story

--- a/stories/Uttarakhand-floods/index.html
+++ b/stories/Uttarakhand-floods/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
-<title>Uttarakhand floods</title>
+<title>Uttarakhand-floods</title>
 
 <body>
     <div class="header-container">
