Linked Uttarakhand story to front page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
     <button>Reporting+Writing</button>
     <br><br>
     <div class="cards-wrapper">
+        <a href='https://areenaarora.com/stories/uttarakhand-floods/'
+            target="_blank">
+            <div class="story-card">
+                <img src="card-photos/uttarakhand.jpg" alt="Temple bells" style="width:100%">
+                <div class="story-card-container">
+                    <h3>Remembering 2013 Uttarakhand Floods</h3>
+                    <h4>March 2022</h4>
+                </div>
+            </div>
+        </a>
         <a href='https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html'
             target="_blank">
             <div class="story-card">
