More open graph meta tags

--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Areena Arora" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://areenaarora.com/" />
-        <meta property="og:description"
-            content="Hi! I'm Areena, a data journalist and current grad student at Columbia University." />
-        <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://areenaarora.com/" />
+    <meta property="og:description"
+        content="Hi! I'm Areena, a data journalist and current grad student at Columbia University." />
+    <meta property="og:locale" content="en_US" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Areena Arora">
+    <meta name="twitter:description"
+        content="Hi! I'm Areena, a data journalist and current grad student at Columbia University." />
+    <meta name="twitter:site" content="@AreenaArora">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="copyright" content="Areena Arora">
+    <meta name="description"
+        content="Hi! I'm Areena, a data journalist and current grad student at Columbia University.">
+    <meta name="keywords" content="Areena Arora, data, journalist, data journalism, Columbia">
+    <meta name="robots" content="noindex, nofollow" />
+
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +59,7 @@
         </a>
     </nav>
     <h1>
-    Areena Arora
+        Areena Arora
     </h1>
     <h2>
         I'm a <span class="blinking">data journalist.</span> Here's some of my recent work! :)
@@ -97,8 +109,7 @@
     <button>Reporting+Writing</button>
     <br><br>
     <div class="cards-wrapper">
-        <a href='https://areenaarora.com/stories/uttarakhand-floods/'
-            target="_blank">
+        <a href='https://areenaarora.com/stories/uttarakhand-floods/' target="_blank">
             <div class="story-card">
                 <img src="card-photos/uttarakhand.jpg" alt="Temple bells" style="width:100%">
                 <div class="story-card-container">
