--- a/stories/Uttarakhand-floods/index.html
+++ b/stories/Uttarakhand-floods/index.html
@@ -9,6 +9,18 @@
     <meta property="og:description"
         content="The terrain has long been a cause of concern when it comes to developing infrastructure there. It is also known as Dev Bhoomi, land of the Gods, home to major Hindu temples and pilgrimage sites." />
 
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="Remembering Uttarakhand Floods">
+        <meta name="twitter:description"
+            content="The terrain has long been a cause of concern when it comes to developing infrastructure there. It is also known as Dev Bhoomi, land of the Gods, home to major Hindu temples and pilgrimage sites." />
+        <meta name="twitter:site" content="@AreenaArora">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="copyright" content="Remembering Uttarakhand Floods">
+        <meta name="description"
+            content="The terrain has long been a cause of concern when it comes to developing infrastructure there. It is also known as Dev Bhoomi, land of the Gods, home to major Hindu temples and pilgrimage sites.">
+        <meta name="keywords" content="Areena Arora, data, journalist, data journalism, Columbia">
+        <meta name="robots" content="noindex, nofollow" />
+
     <link rel="stylesheet" href="../../stylesheet.css">
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
