Jai mata di lets rock
pls

--- a/stories/Uttarakhand-floods/index.html
+++ b/stories/Uttarakhand-floods/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:Remembering Uttarakhand Floods" content="Remembering Uttarakhand Floods" />
-    <meta property="og:image" content="./kedarnath-temple.jpg" />
+    <meta property="og:image" content="https://areenaarora.com/stories/uttarakhand-floods/kedarnath-temple.jpg"/>
     <meta property="og:url" content="https://areenaarora.com/stories/uttarakhand-floods/" />
     <meta property="og:description"
         content="The terrain has long been a cause of concern when it comes to developing infrastructure there. It is also known as Dev Bhoomi, land of the Gods, home to major Hindu temples and pilgrimage sites." />
