--- a/aboutme.html
+++ b/aboutme.html
@@ -76,8 +76,8 @@
         <div>
             <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <!-- <a class="aboutme-buttons" href="https://calendly.com/areena-arora" target="_blank">Let's schedule a
-                chat</a> -->
+            <a class="aboutme-buttons" href="https://calendly.com/areena-arora" target="_blank">Let's schedule a
+                chat</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a class="aboutme-buttons" href="https://areena.substack.com/" target="_blank">Subscribe to my
                 newsletter
