--- a/stories/vaccines/index.html
+++ b/stories/vaccines/index.html
@@ -25,7 +25,7 @@
             left: 0;
             width: 100%;
             margin: 0;
-            background-color: #8a8a8a;
+            /* background-color: #8a8a8a; */
             z-index: 0;
             top: 12.5vh;
             height: 75vh;
@@ -44,7 +44,7 @@
         .step {
             margin: 0 auto 1.5rem auto;
             color: #fff;
-            background-color: rgba(0, 0, 0, 0.1);
+            /* background-color: rgba(0, 0, 0, 0.1); */
         }
 
         .step:last-child {
@@ -53,7 +53,7 @@
 
         .step.is-active p {
             background-color: goldenrod;
-            color: #3b3b3b;
+            /* color: #3b3b3b; */
         }
 
         .step p {
@@ -73,7 +73,6 @@
             Covishield-Astrazeneca. Covaxin. Various variants. CDC guidelines
         </h2>
     </div>
-    <br<br><br>
         <div class="first-scroll">
             <h1>
                 Overwhelmed?
@@ -362,5 +361,3 @@
       init();
     </script>
 </body>
-
-</html>
